servidor/MIA_P1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> comandoexecute
Rule 5     instruccion -> comandomkdisk
Rule 6     instruccion -> comentarios
Rule 7     instruccion -> comandorep
Rule 8     instruccion -> comandormdisk
Rule 9     instruccion -> comandofdisk
Rule 10    instruccion -> comandomount
Rule 11    instruccion -> comandounmount
Rule 12    instruccion -> comandomkfs
Rule 13    instruccion -> comandologin
Rule 14    instruccion -> comandomkgrp
Rule 15    instruccion -> PAUSE
Rule 16    comandoexecute -> EXECUTE GUION PATH IGUAL VALORDEPATH NOMBREARCHIVO
Rule 17    comandomkdisk -> MKDISK listaparametros_mkdisk
Rule 18    listaparametros_mkdisk -> listaparametros_mkdisk parametromkdisk
Rule 19    listaparametros_mkdisk -> parametromkdisk
Rule 20    parametromkdisk -> GUION parametropath
Rule 21    parametromkdisk -> GUION parametrosize
Rule 22    parametromkdisk -> GUION parametrounit
Rule 23    parametromkdisk -> GUION parametrofit
Rule 24    parametropath -> PATH IGUAL valorespath
Rule 25    valorespath -> VALORDEPATH NOMBREARCHIVO
Rule 26    valorespath -> COMILLAS VALORDEPATH NOMBREARCHIVO COMILLAS
Rule 27    parametrosize -> SIZE IGUAL NUMEROS
Rule 28    parametrounit -> UNIT IGUAL IDENTIFICADOR
Rule 29    parametrofit -> FIT IGUAL IDENTIFICADOR
Rule 30    comentarios -> COMENTARIOS
Rule 31    comandorep -> REP listaparametros_rep
Rule 32    listaparametros_rep -> listaparametros_rep parametrorep
Rule 33    listaparametros_rep -> parametrorep
Rule 34    parametrorep -> GUION parametroname
Rule 35    parametrorep -> GUION parametropath
Rule 36    parametrorep -> GUION parametroid
Rule 37    parametrorep -> GUION parametroruta
Rule 38    parametroruta -> RUTA IGUAL VALORDEPATH NOMBREARCHIVO
Rule 39    comandormdisk -> RMDISK GUION parametropath
Rule 40    comandofdisk -> FDISK listaparametros_fdisk
Rule 41    listaparametros_fdisk -> listaparametros_fdisk parametrofdisk
Rule 42    listaparametros_fdisk -> parametrofdisk
Rule 43    parametrofdisk -> GUION parametrosize
Rule 44    parametrofdisk -> GUION parametropath
Rule 45    parametrofdisk -> GUION parametroname
Rule 46    parametrofdisk -> GUION parametrounit
Rule 47    parametrofdisk -> GUION parametrotype
Rule 48    parametrofdisk -> GUION parametrofit
Rule 49    parametrofdisk -> GUION parametrodelete
Rule 50    parametrofdisk -> GUION parametroadd
Rule 51    parametroname -> NAME IGUAL STRING
Rule 52    parametroname -> NAME IGUAL IDENTIFICADOR
Rule 53    parametrotype -> TYPE IGUAL IDENTIFICADOR
Rule 54    parametrodelete -> DELETE IGUAL IDENTIFICADOR
Rule 55    parametroadd -> ADD IGUAL NUMEROS
Rule 56    comandomount -> MOUNT listaparametros_mount
Rule 57    listaparametros_mount -> listaparametros_mount parametromount
Rule 58    listaparametros_mount -> parametromount
Rule 59    parametromount -> GUION parametropath
Rule 60    parametromount -> GUION parametroname
Rule 61    comandounmount -> UNMOUNT listaids_unmount
Rule 62    listaids_unmount -> listaids_unmount parametrounmount
Rule 63    listaids_unmount -> parametrounmount
Rule 64    parametrounmount -> GUION parametroid
Rule 65    parametroid -> ID IGUAL IDENTIFICADOR
Rule 66    comandomkfs -> MKFS listaparametros_mkfs
Rule 67    listaparametros_mkfs -> listaparametros_mkfs parametromkfs
Rule 68    listaparametros_mkfs -> parametromkfs
Rule 69    parametromkfs -> GUION parametroid
Rule 70    parametromkfs -> GUION parametrotype
Rule 71    parametromkfs -> GUION parametrofs
Rule 72    parametrofs -> FS IGUAL FORMATEAR
Rule 73    comandologin -> LOGIN listaparametros_login
Rule 74    listaparametros_login -> listaparametros_login parametrologin
Rule 75    listaparametros_login -> parametrologin
Rule 76    parametrologin -> GUION parametrouser
Rule 77    parametrologin -> GUION parametropassword
Rule 78    parametrologin -> GUION parametroid
Rule 79    parametrouser -> USER IGUAL IDENTIFICADOR
Rule 80    parametropassword -> PASS IGUAL IDENTIFICADOR
Rule 81    instruccion -> LOGOUT
Rule 82    comandomkgrp -> MKGRP GUION parametrouser

Terminals, with rules where they appear

ADD                  : 55
COMENTARIOS          : 30
COMILLAS             : 26 26
DELETE               : 54
EXECUTE              : 16
FDISK                : 40
FIT                  : 29
FORMATEAR            : 72
FS                   : 72
GUION                : 16 20 21 22 23 34 35 36 37 39 43 44 45 46 47 48 49 50 59 60 64 69 70 71 76 77 78 82
ID                   : 65
IDENTIFICADOR        : 28 29 52 53 54 65 79 80
IGUAL                : 16 24 27 28 29 38 51 52 53 54 55 65 72 79 80
LOGIN                : 73
LOGOUT               : 81
MKDISK               : 17
MKFS                 : 66
MKGRP                : 82
MOUNT                : 56
NAME                 : 51 52
NOMBREARCHIVO        : 16 25 26 38
NUMEROS              : 27 55
PASS                 : 80
PATH                 : 16 24
PAUSE                : 15
REP                  : 31
RMDISK               : 39
RUTA                 : 38
SIZE                 : 27
STRING               : 51
TYPE                 : 53
UNIT                 : 28
UNMOUNT              : 61
USER                 : 79
VALORDEPATH          : 16 25 26 38
error                : 

Nonterminals, with rules where they appear

comandoexecute       : 4
comandofdisk         : 9
comandologin         : 13
comandomkdisk        : 5
comandomkfs          : 12
comandomkgrp         : 14
comandomount         : 10
comandorep           : 7
comandormdisk        : 8
comandounmount       : 11
comentarios          : 6
inicio               : 0
instruccion          : 2 3
instrucciones        : 1 2
listaids_unmount     : 61 62
listaparametros_fdisk : 40 41
listaparametros_login : 73 74
listaparametros_mkdisk : 17 18
listaparametros_mkfs : 66 67
listaparametros_mount : 56 57
listaparametros_rep  : 31 32
parametroadd         : 50
parametrodelete      : 49
parametrofdisk       : 41 42
parametrofit         : 23 48
parametrofs          : 71
parametroid          : 36 64 69 78
parametrologin       : 74 75
parametromkdisk      : 18 19
parametromkfs        : 67 68
parametromount       : 57 58
parametroname        : 34 45 60
parametropassword    : 77
parametropath        : 20 35 39 44 59
parametrorep         : 32 33
parametroruta        : 37
parametrosize        : 21 43
parametrotype        : 47 70
parametrounit        : 22 46
parametrounmount     : 62 63
parametrouser        : 76 82
valorespath          : 24

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . comandoexecute
    (5) instruccion -> . comandomkdisk
    (6) instruccion -> . comentarios
    (7) instruccion -> . comandorep
    (8) instruccion -> . comandormdisk
    (9) instruccion -> . comandofdisk
    (10) instruccion -> . comandomount
    (11) instruccion -> . comandounmount
    (12) instruccion -> . comandomkfs
    (13) instruccion -> . comandologin
    (14) instruccion -> . comandomkgrp
    (15) instruccion -> . PAUSE
    (81) instruccion -> . LOGOUT
    (16) comandoexecute -> . EXECUTE GUION PATH IGUAL VALORDEPATH NOMBREARCHIVO
    (17) comandomkdisk -> . MKDISK listaparametros_mkdisk
    (30) comentarios -> . COMENTARIOS
    (31) comandorep -> . REP listaparametros_rep
    (39) comandormdisk -> . RMDISK GUION parametropath
    (40) comandofdisk -> . FDISK listaparametros_fdisk
    (56) comandomount -> . MOUNT listaparametros_mount
    (61) comandounmount -> . UNMOUNT listaids_unmount
    (66) comandomkfs -> . MKFS listaparametros_mkfs
    (73) comandologin -> . LOGIN listaparametros_login
    (82) comandomkgrp -> . MKGRP GUION parametrouser

    PAUSE           shift and go to state 15
    LOGOUT          shift and go to state 16
    EXECUTE         shift and go to state 17
    MKDISK          shift and go to state 18
    COMENTARIOS     shift and go to state 19
    REP             shift and go to state 20
    RMDISK          shift and go to state 21
    FDISK           shift and go to state 22
    MOUNT           shift and go to state 23
    UNMOUNT         shift and go to state 24
    MKFS            shift and go to state 25
    LOGIN           shift and go to state 26
    MKGRP           shift and go to state 27

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    comandoexecute                 shift and go to state 4
    comandomkdisk                  shift and go to state 5
    comentarios                    shift and go to state 6
    comandorep                     shift and go to state 7
    comandormdisk                  shift and go to state 8
    comandofdisk                   shift and go to state 9
    comandomount                   shift and go to state 10
    comandounmount                 shift and go to state 11
    comandomkfs                    shift and go to state 12
    comandologin                   shift and go to state 13
    comandomkgrp                   shift and go to state 14

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . comandoexecute
    (5) instruccion -> . comandomkdisk
    (6) instruccion -> . comentarios
    (7) instruccion -> . comandorep
    (8) instruccion -> . comandormdisk
    (9) instruccion -> . comandofdisk
    (10) instruccion -> . comandomount
    (11) instruccion -> . comandounmount
    (12) instruccion -> . comandomkfs
    (13) instruccion -> . comandologin
    (14) instruccion -> . comandomkgrp
    (15) instruccion -> . PAUSE
    (81) instruccion -> . LOGOUT
    (16) comandoexecute -> . EXECUTE GUION PATH IGUAL VALORDEPATH NOMBREARCHIVO
    (17) comandomkdisk -> . MKDISK listaparametros_mkdisk
    (30) comentarios -> . COMENTARIOS
    (31) comandorep -> . REP listaparametros_rep
    (39) comandormdisk -> . RMDISK GUION parametropath
    (40) comandofdisk -> . FDISK listaparametros_fdisk
    (56) comandomount -> . MOUNT listaparametros_mount
    (61) comandounmount -> . UNMOUNT listaids_unmount
    (66) comandomkfs -> . MKFS listaparametros_mkfs
    (73) comandologin -> . LOGIN listaparametros_login
    (82) comandomkgrp -> . MKGRP GUION parametrouser

    $end            reduce using rule 1 (inicio -> instrucciones .)
    PAUSE           shift and go to state 15
    LOGOUT          shift and go to state 16
    EXECUTE         shift and go to state 17
    MKDISK          shift and go to state 18
    COMENTARIOS     shift and go to state 19
    REP             shift and go to state 20
    RMDISK          shift and go to state 21
    FDISK           shift and go to state 22
    MOUNT           shift and go to state 23
    UNMOUNT         shift and go to state 24
    MKFS            shift and go to state 25
    LOGIN           shift and go to state 26
    MKGRP           shift and go to state 27

    instruccion                    shift and go to state 28
    comandoexecute                 shift and go to state 4
    comandomkdisk                  shift and go to state 5
    comentarios                    shift and go to state 6
    comandorep                     shift and go to state 7
    comandormdisk                  shift and go to state 8
    comandofdisk                   shift and go to state 9
    comandomount                   shift and go to state 10
    comandounmount                 shift and go to state 11
    comandomkfs                    shift and go to state 12
    comandologin                   shift and go to state 13
    comandomkgrp                   shift and go to state 14

state 3

    (3) instrucciones -> instruccion .

    PAUSE           reduce using rule 3 (instrucciones -> instruccion .)
    LOGOUT          reduce using rule 3 (instrucciones -> instruccion .)
    EXECUTE         reduce using rule 3 (instrucciones -> instruccion .)
    MKDISK          reduce using rule 3 (instrucciones -> instruccion .)
    COMENTARIOS     reduce using rule 3 (instrucciones -> instruccion .)
    REP             reduce using rule 3 (instrucciones -> instruccion .)
    RMDISK          reduce using rule 3 (instrucciones -> instruccion .)
    FDISK           reduce using rule 3 (instrucciones -> instruccion .)
    MOUNT           reduce using rule 3 (instrucciones -> instruccion .)
    UNMOUNT         reduce using rule 3 (instrucciones -> instruccion .)
    MKFS            reduce using rule 3 (instrucciones -> instruccion .)
    LOGIN           reduce using rule 3 (instrucciones -> instruccion .)
    MKGRP           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> comandoexecute .

    PAUSE           reduce using rule 4 (instruccion -> comandoexecute .)
    LOGOUT          reduce using rule 4 (instruccion -> comandoexecute .)
    EXECUTE         reduce using rule 4 (instruccion -> comandoexecute .)
    MKDISK          reduce using rule 4 (instruccion -> comandoexecute .)
    COMENTARIOS     reduce using rule 4 (instruccion -> comandoexecute .)
    REP             reduce using rule 4 (instruccion -> comandoexecute .)
    RMDISK          reduce using rule 4 (instruccion -> comandoexecute .)
    FDISK           reduce using rule 4 (instruccion -> comandoexecute .)
    MOUNT           reduce using rule 4 (instruccion -> comandoexecute .)
    UNMOUNT         reduce using rule 4 (instruccion -> comandoexecute .)
    MKFS            reduce using rule 4 (instruccion -> comandoexecute .)
    LOGIN           reduce using rule 4 (instruccion -> comandoexecute .)
    MKGRP           reduce using rule 4 (instruccion -> comandoexecute .)
    $end            reduce using rule 4 (instruccion -> comandoexecute .)


state 5

    (5) instruccion -> comandomkdisk .

    PAUSE           reduce using rule 5 (instruccion -> comandomkdisk .)
    LOGOUT          reduce using rule 5 (instruccion -> comandomkdisk .)
    EXECUTE         reduce using rule 5 (instruccion -> comandomkdisk .)
    MKDISK          reduce using rule 5 (instruccion -> comandomkdisk .)
    COMENTARIOS     reduce using rule 5 (instruccion -> comandomkdisk .)
    REP             reduce using rule 5 (instruccion -> comandomkdisk .)
    RMDISK          reduce using rule 5 (instruccion -> comandomkdisk .)
    FDISK           reduce using rule 5 (instruccion -> comandomkdisk .)
    MOUNT           reduce using rule 5 (instruccion -> comandomkdisk .)
    UNMOUNT         reduce using rule 5 (instruccion -> comandomkdisk .)
    MKFS            reduce using rule 5 (instruccion -> comandomkdisk .)
    LOGIN           reduce using rule 5 (instruccion -> comandomkdisk .)
    MKGRP           reduce using rule 5 (instruccion -> comandomkdisk .)
    $end            reduce using rule 5 (instruccion -> comandomkdisk .)


state 6

    (6) instruccion -> comentarios .

    PAUSE           reduce using rule 6 (instruccion -> comentarios .)
    LOGOUT          reduce using rule 6 (instruccion -> comentarios .)
    EXECUTE         reduce using rule 6 (instruccion -> comentarios .)
    MKDISK          reduce using rule 6 (instruccion -> comentarios .)
    COMENTARIOS     reduce using rule 6 (instruccion -> comentarios .)
    REP             reduce using rule 6 (instruccion -> comentarios .)
    RMDISK          reduce using rule 6 (instruccion -> comentarios .)
    FDISK           reduce using rule 6 (instruccion -> comentarios .)
    MOUNT           reduce using rule 6 (instruccion -> comentarios .)
    UNMOUNT         reduce using rule 6 (instruccion -> comentarios .)
    MKFS            reduce using rule 6 (instruccion -> comentarios .)
    LOGIN           reduce using rule 6 (instruccion -> comentarios .)
    MKGRP           reduce using rule 6 (instruccion -> comentarios .)
    $end            reduce using rule 6 (instruccion -> comentarios .)


state 7

    (7) instruccion -> comandorep .

    PAUSE           reduce using rule 7 (instruccion -> comandorep .)
    LOGOUT          reduce using rule 7 (instruccion -> comandorep .)
    EXECUTE         reduce using rule 7 (instruccion -> comandorep .)
    MKDISK          reduce using rule 7 (instruccion -> comandorep .)
    COMENTARIOS     reduce using rule 7 (instruccion -> comandorep .)
    REP             reduce using rule 7 (instruccion -> comandorep .)
    RMDISK          reduce using rule 7 (instruccion -> comandorep .)
    FDISK           reduce using rule 7 (instruccion -> comandorep .)
    MOUNT           reduce using rule 7 (instruccion -> comandorep .)
    UNMOUNT         reduce using rule 7 (instruccion -> comandorep .)
    MKFS            reduce using rule 7 (instruccion -> comandorep .)
    LOGIN           reduce using rule 7 (instruccion -> comandorep .)
    MKGRP           reduce using rule 7 (instruccion -> comandorep .)
    $end            reduce using rule 7 (instruccion -> comandorep .)


state 8

    (8) instruccion -> comandormdisk .

    PAUSE           reduce using rule 8 (instruccion -> comandormdisk .)
    LOGOUT          reduce using rule 8 (instruccion -> comandormdisk .)
    EXECUTE         reduce using rule 8 (instruccion -> comandormdisk .)
    MKDISK          reduce using rule 8 (instruccion -> comandormdisk .)
    COMENTARIOS     reduce using rule 8 (instruccion -> comandormdisk .)
    REP             reduce using rule 8 (instruccion -> comandormdisk .)
    RMDISK          reduce using rule 8 (instruccion -> comandormdisk .)
    FDISK           reduce using rule 8 (instruccion -> comandormdisk .)
    MOUNT           reduce using rule 8 (instruccion -> comandormdisk .)
    UNMOUNT         reduce using rule 8 (instruccion -> comandormdisk .)
    MKFS            reduce using rule 8 (instruccion -> comandormdisk .)
    LOGIN           reduce using rule 8 (instruccion -> comandormdisk .)
    MKGRP           reduce using rule 8 (instruccion -> comandormdisk .)
    $end            reduce using rule 8 (instruccion -> comandormdisk .)


state 9

    (9) instruccion -> comandofdisk .

    PAUSE           reduce using rule 9 (instruccion -> comandofdisk .)
    LOGOUT          reduce using rule 9 (instruccion -> comandofdisk .)
    EXECUTE         reduce using rule 9 (instruccion -> comandofdisk .)
    MKDISK          reduce using rule 9 (instruccion -> comandofdisk .)
    COMENTARIOS     reduce using rule 9 (instruccion -> comandofdisk .)
    REP             reduce using rule 9 (instruccion -> comandofdisk .)
    RMDISK          reduce using rule 9 (instruccion -> comandofdisk .)
    FDISK           reduce using rule 9 (instruccion -> comandofdisk .)
    MOUNT           reduce using rule 9 (instruccion -> comandofdisk .)
    UNMOUNT         reduce using rule 9 (instruccion -> comandofdisk .)
    MKFS            reduce using rule 9 (instruccion -> comandofdisk .)
    LOGIN           reduce using rule 9 (instruccion -> comandofdisk .)
    MKGRP           reduce using rule 9 (instruccion -> comandofdisk .)
    $end            reduce using rule 9 (instruccion -> comandofdisk .)


state 10

    (10) instruccion -> comandomount .

    PAUSE           reduce using rule 10 (instruccion -> comandomount .)
    LOGOUT          reduce using rule 10 (instruccion -> comandomount .)
    EXECUTE         reduce using rule 10 (instruccion -> comandomount .)
    MKDISK          reduce using rule 10 (instruccion -> comandomount .)
    COMENTARIOS     reduce using rule 10 (instruccion -> comandomount .)
    REP             reduce using rule 10 (instruccion -> comandomount .)
    RMDISK          reduce using rule 10 (instruccion -> comandomount .)
    FDISK           reduce using rule 10 (instruccion -> comandomount .)
    MOUNT           reduce using rule 10 (instruccion -> comandomount .)
    UNMOUNT         reduce using rule 10 (instruccion -> comandomount .)
    MKFS            reduce using rule 10 (instruccion -> comandomount .)
    LOGIN           reduce using rule 10 (instruccion -> comandomount .)
    MKGRP           reduce using rule 10 (instruccion -> comandomount .)
    $end            reduce using rule 10 (instruccion -> comandomount .)


state 11

    (11) instruccion -> comandounmount .

    PAUSE           reduce using rule 11 (instruccion -> comandounmount .)
    LOGOUT          reduce using rule 11 (instruccion -> comandounmount .)
    EXECUTE         reduce using rule 11 (instruccion -> comandounmount .)
    MKDISK          reduce using rule 11 (instruccion -> comandounmount .)
    COMENTARIOS     reduce using rule 11 (instruccion -> comandounmount .)
    REP             reduce using rule 11 (instruccion -> comandounmount .)
    RMDISK          reduce using rule 11 (instruccion -> comandounmount .)
    FDISK           reduce using rule 11 (instruccion -> comandounmount .)
    MOUNT           reduce using rule 11 (instruccion -> comandounmount .)
    UNMOUNT         reduce using rule 11 (instruccion -> comandounmount .)
    MKFS            reduce using rule 11 (instruccion -> comandounmount .)
    LOGIN           reduce using rule 11 (instruccion -> comandounmount .)
    MKGRP           reduce using rule 11 (instruccion -> comandounmount .)
    $end            reduce using rule 11 (instruccion -> comandounmount .)


state 12

    (12) instruccion -> comandomkfs .

    PAUSE           reduce using rule 12 (instruccion -> comandomkfs .)
    LOGOUT          reduce using rule 12 (instruccion -> comandomkfs .)
    EXECUTE         reduce using rule 12 (instruccion -> comandomkfs .)
    MKDISK          reduce using rule 12 (instruccion -> comandomkfs .)
    COMENTARIOS     reduce using rule 12 (instruccion -> comandomkfs .)
    REP             reduce using rule 12 (instruccion -> comandomkfs .)
    RMDISK          reduce using rule 12 (instruccion -> comandomkfs .)
    FDISK           reduce using rule 12 (instruccion -> comandomkfs .)
    MOUNT           reduce using rule 12 (instruccion -> comandomkfs .)
    UNMOUNT         reduce using rule 12 (instruccion -> comandomkfs .)
    MKFS            reduce using rule 12 (instruccion -> comandomkfs .)
    LOGIN           reduce using rule 12 (instruccion -> comandomkfs .)
    MKGRP           reduce using rule 12 (instruccion -> comandomkfs .)
    $end            reduce using rule 12 (instruccion -> comandomkfs .)


state 13

    (13) instruccion -> comandologin .

    PAUSE           reduce using rule 13 (instruccion -> comandologin .)
    LOGOUT          reduce using rule 13 (instruccion -> comandologin .)
    EXECUTE         reduce using rule 13 (instruccion -> comandologin .)
    MKDISK          reduce using rule 13 (instruccion -> comandologin .)
    COMENTARIOS     reduce using rule 13 (instruccion -> comandologin .)
    REP             reduce using rule 13 (instruccion -> comandologin .)
    RMDISK          reduce using rule 13 (instruccion -> comandologin .)
    FDISK           reduce using rule 13 (instruccion -> comandologin .)
    MOUNT           reduce using rule 13 (instruccion -> comandologin .)
    UNMOUNT         reduce using rule 13 (instruccion -> comandologin .)
    MKFS            reduce using rule 13 (instruccion -> comandologin .)
    LOGIN           reduce using rule 13 (instruccion -> comandologin .)
    MKGRP           reduce using rule 13 (instruccion -> comandologin .)
    $end            reduce using rule 13 (instruccion -> comandologin .)


state 14

    (14) instruccion -> comandomkgrp .

    PAUSE           reduce using rule 14 (instruccion -> comandomkgrp .)
    LOGOUT          reduce using rule 14 (instruccion -> comandomkgrp .)
    EXECUTE         reduce using rule 14 (instruccion -> comandomkgrp .)
    MKDISK          reduce using rule 14 (instruccion -> comandomkgrp .)
    COMENTARIOS     reduce using rule 14 (instruccion -> comandomkgrp .)
    REP             reduce using rule 14 (instruccion -> comandomkgrp .)
    RMDISK          reduce using rule 14 (instruccion -> comandomkgrp .)
    FDISK           reduce using rule 14 (instruccion -> comandomkgrp .)
    MOUNT           reduce using rule 14 (instruccion -> comandomkgrp .)
    UNMOUNT         reduce using rule 14 (instruccion -> comandomkgrp .)
    MKFS            reduce using rule 14 (instruccion -> comandomkgrp .)
    LOGIN           reduce using rule 14 (instruccion -> comandomkgrp .)
    MKGRP           reduce using rule 14 (instruccion -> comandomkgrp .)
    $end            reduce using rule 14 (instruccion -> comandomkgrp .)


state 15

    (15) instruccion -> PAUSE .

    PAUSE           reduce using rule 15 (instruccion -> PAUSE .)
    LOGOUT          reduce using rule 15 (instruccion -> PAUSE .)
    EXECUTE         reduce using rule 15 (instruccion -> PAUSE .)
    MKDISK          reduce using rule 15 (instruccion -> PAUSE .)
    COMENTARIOS     reduce using rule 15 (instruccion -> PAUSE .)
    REP             reduce using rule 15 (instruccion -> PAUSE .)
    RMDISK          reduce using rule 15 (instruccion -> PAUSE .)
    FDISK           reduce using rule 15 (instruccion -> PAUSE .)
    MOUNT           reduce using rule 15 (instruccion -> PAUSE .)
    UNMOUNT         reduce using rule 15 (instruccion -> PAUSE .)
    MKFS            reduce using rule 15 (instruccion -> PAUSE .)
    LOGIN           reduce using rule 15 (instruccion -> PAUSE .)
    MKGRP           reduce using rule 15 (instruccion -> PAUSE .)
    $end            reduce using rule 15 (instruccion -> PAUSE .)


state 16

    (81) instruccion -> LOGOUT .

    PAUSE           reduce using rule 81 (instruccion -> LOGOUT .)
    LOGOUT          reduce using rule 81 (instruccion -> LOGOUT .)
    EXECUTE         reduce using rule 81 (instruccion -> LOGOUT .)
    MKDISK          reduce using rule 81 (instruccion -> LOGOUT .)
    COMENTARIOS     reduce using rule 81 (instruccion -> LOGOUT .)
    REP             reduce using rule 81 (instruccion -> LOGOUT .)
    RMDISK          reduce using rule 81 (instruccion -> LOGOUT .)
    FDISK           reduce using rule 81 (instruccion -> LOGOUT .)
    MOUNT           reduce using rule 81 (instruccion -> LOGOUT .)
    UNMOUNT         reduce using rule 81 (instruccion -> LOGOUT .)
    MKFS            reduce using rule 81 (instruccion -> LOGOUT .)
    LOGIN           reduce using rule 81 (instruccion -> LOGOUT .)
    MKGRP           reduce using rule 81 (instruccion -> LOGOUT .)
    $end            reduce using rule 81 (instruccion -> LOGOUT .)


state 17

    (16) comandoexecute -> EXECUTE . GUION PATH IGUAL VALORDEPATH NOMBREARCHIVO

    GUION           shift and go to state 29


state 18

    (17) comandomkdisk -> MKDISK . listaparametros_mkdisk
    (18) listaparametros_mkdisk -> . listaparametros_mkdisk parametromkdisk
    (19) listaparametros_mkdisk -> . parametromkdisk
    (20) parametromkdisk -> . GUION parametropath
    (21) parametromkdisk -> . GUION parametrosize
    (22) parametromkdisk -> . GUION parametrounit
    (23) parametromkdisk -> . GUION parametrofit

    GUION           shift and go to state 32

    listaparametros_mkdisk         shift and go to state 30
    parametromkdisk                shift and go to state 31

state 19

    (30) comentarios -> COMENTARIOS .

    PAUSE           reduce using rule 30 (comentarios -> COMENTARIOS .)
    LOGOUT          reduce using rule 30 (comentarios -> COMENTARIOS .)
    EXECUTE         reduce using rule 30 (comentarios -> COMENTARIOS .)
    MKDISK          reduce using rule 30 (comentarios -> COMENTARIOS .)
    COMENTARIOS     reduce using rule 30 (comentarios -> COMENTARIOS .)
    REP             reduce using rule 30 (comentarios -> COMENTARIOS .)
    RMDISK          reduce using rule 30 (comentarios -> COMENTARIOS .)
    FDISK           reduce using rule 30 (comentarios -> COMENTARIOS .)
    MOUNT           reduce using rule 30 (comentarios -> COMENTARIOS .)
    UNMOUNT         reduce using rule 30 (comentarios -> COMENTARIOS .)
    MKFS            reduce using rule 30 (comentarios -> COMENTARIOS .)
    LOGIN           reduce using rule 30 (comentarios -> COMENTARIOS .)
    MKGRP           reduce using rule 30 (comentarios -> COMENTARIOS .)
    $end            reduce using rule 30 (comentarios -> COMENTARIOS .)


state 20

    (31) comandorep -> REP . listaparametros_rep
    (32) listaparametros_rep -> . listaparametros_rep parametrorep
    (33) listaparametros_rep -> . parametrorep
    (34) parametrorep -> . GUION parametroname
    (35) parametrorep -> . GUION parametropath
    (36) parametrorep -> . GUION parametroid
    (37) parametrorep -> . GUION parametroruta

    GUION           shift and go to state 35

    listaparametros_rep            shift and go to state 33
    parametrorep                   shift and go to state 34

state 21

    (39) comandormdisk -> RMDISK . GUION parametropath

    GUION           shift and go to state 36


state 22

    (40) comandofdisk -> FDISK . listaparametros_fdisk
    (41) listaparametros_fdisk -> . listaparametros_fdisk parametrofdisk
    (42) listaparametros_fdisk -> . parametrofdisk
    (43) parametrofdisk -> . GUION parametrosize
    (44) parametrofdisk -> . GUION parametropath
    (45) parametrofdisk -> . GUION parametroname
    (46) parametrofdisk -> . GUION parametrounit
    (47) parametrofdisk -> . GUION parametrotype
    (48) parametrofdisk -> . GUION parametrofit
    (49) parametrofdisk -> . GUION parametrodelete
    (50) parametrofdisk -> . GUION parametroadd

    GUION           shift and go to state 39

    listaparametros_fdisk          shift and go to state 37
    parametrofdisk                 shift and go to state 38

state 23

    (56) comandomount -> MOUNT . listaparametros_mount
    (57) listaparametros_mount -> . listaparametros_mount parametromount
    (58) listaparametros_mount -> . parametromount
    (59) parametromount -> . GUION parametropath
    (60) parametromount -> . GUION parametroname

    GUION           shift and go to state 42

    listaparametros_mount          shift and go to state 40
    parametromount                 shift and go to state 41

state 24

    (61) comandounmount -> UNMOUNT . listaids_unmount
    (62) listaids_unmount -> . listaids_unmount parametrounmount
    (63) listaids_unmount -> . parametrounmount
    (64) parametrounmount -> . GUION parametroid

    GUION           shift and go to state 45

    listaids_unmount               shift and go to state 43
    parametrounmount               shift and go to state 44

state 25

    (66) comandomkfs -> MKFS . listaparametros_mkfs
    (67) listaparametros_mkfs -> . listaparametros_mkfs parametromkfs
    (68) listaparametros_mkfs -> . parametromkfs
    (69) parametromkfs -> . GUION parametroid
    (70) parametromkfs -> . GUION parametrotype
    (71) parametromkfs -> . GUION parametrofs

    GUION           shift and go to state 48

    listaparametros_mkfs           shift and go to state 46
    parametromkfs                  shift and go to state 47

state 26

    (73) comandologin -> LOGIN . listaparametros_login
    (74) listaparametros_login -> . listaparametros_login parametrologin
    (75) listaparametros_login -> . parametrologin
    (76) parametrologin -> . GUION parametrouser
    (77) parametrologin -> . GUION parametropassword
    (78) parametrologin -> . GUION parametroid

    GUION           shift and go to state 51

    listaparametros_login          shift and go to state 49
    parametrologin                 shift and go to state 50

state 27

    (82) comandomkgrp -> MKGRP . GUION parametrouser

    GUION           shift and go to state 52


state 28

    (2) instrucciones -> instrucciones instruccion .

    PAUSE           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LOGOUT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    EXECUTE         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    MKDISK          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    COMENTARIOS     reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    REP             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RMDISK          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FDISK           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    MOUNT           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    UNMOUNT         reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    MKFS            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LOGIN           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    MKGRP           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 29

    (16) comandoexecute -> EXECUTE GUION . PATH IGUAL VALORDEPATH NOMBREARCHIVO

    PATH            shift and go to state 53


state 30

    (17) comandomkdisk -> MKDISK listaparametros_mkdisk .
    (18) listaparametros_mkdisk -> listaparametros_mkdisk . parametromkdisk
    (20) parametromkdisk -> . GUION parametropath
    (21) parametromkdisk -> . GUION parametrosize
    (22) parametromkdisk -> . GUION parametrounit
    (23) parametromkdisk -> . GUION parametrofit
